Update web-server. Fix openAPI docs
