# server/src/main/java/ru/george/booksharing/server/model/User.java
@@ -2,6 +2,9 @@ package ru.george.booksharing.server.model;
 
 import jakarta.persistence.*;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+
+import java.util.Set;
 
 @Table(name = "users")
 @Entity
@@ -12,46 +15,43 @@ public class User {
     private String username;
     private String password;
     private UserRole role;
+    @OneToMany(fetch = FetchType.EAGER, cascade = CascadeType.ALL)
+    private Set<Book> books;
 
     protected User() {
     }
 
-    public User(@NotNull Integer id, @NotNull String username, @NotNull String password, @NotNull UserRole role) {
+    public User(
+            @NotNull Integer id,
+            @NotNull String username,
+            @NotNull String password,
+            @NotNull UserRole role,
+            @Nullable Set<Book> books
+    ) {
         this.id = id;
         this.username = username;
         this.password = password;
         this.role = role;
+        this.books = books;
     }
 
     public Integer getId() {
         return id;
     }
 
-    public void setId(Integer id) {
-        this.id = id;
-    }
-
     public String getUsername() {
         return username;
-    }
-
-    public void setUsername(String username) {
-        this.username = username;
     }
 
     public String getPassword() {
         return password;
     }
 
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
     public UserRole getRole() {
         return role;
     }
 
-    public void setRole(UserRole role) {
-        this.role = role;
+    public Set<Book> getBooks() {
+        return books;
     }
 }
